# niri-app-hotkey

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: action.rs  cli.rs  config.rs  main.rs
